--- a/render.yaml
+++ b/render.yaml
@@ -1,50 +1,22 @@
-# Render Blueprint
+# Render Blueprint - Single Web Service
 # https://render.com/docs/blueprint-spec
 
 services:
-  # Frontend - Next.js
   - type: web
-    name: world-boss-web
+    name: world-boss-clicker
     runtime: node
-    rootDir: apps/web
-    buildCommand: pnpm install && pnpm build
-    startCommand: pnpm start
+    buildCommand: |
+      npm install -g pnpm &&
+      pnpm install &&
+      pnpm build:web &&
+      cp -r apps/web/public apps/web/.next/standalone/apps/web/ &&
+      cp -r apps/web/.next/static apps/web/.next/standalone/apps/web/.next/
+    startCommand: node apps/web/.next/standalone/apps/web/server.js
     envVars:
       - key: NODE_ENV
         value: production
-      - key: NEXT_PUBLIC_API_URL
-        sync: false
+      - key: PORT
+        value: 3000
+      - key: HOSTNAME
+        value: 0.0.0.0
     healthCheckPath: /
-
-  # Backend - Fastify + Socket.io
-  - type: web
-    name: world-boss-server
-    runtime: node
-    rootDir: apps/server
-    buildCommand: pnpm install && pnpm build
-    startCommand: pnpm start
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - key: DATABASE_URL
-        fromDatabase:
-          name: world-boss-db
-          property: connectionString
-      - key: REDIS_URL
-        fromService:
-          name: world-boss-redis
-          type: redis
-          property: connectionString
-      - key: CORS_ORIGIN
-        sync: false
-    healthCheckPath: /health
-
-databases:
-  - name: world-boss-db
-    databaseName: worldboss
-    user: worldboss
-    plan: free
-
-# Redis (Render native)
-# Note: Redis requires paid plan on Render
-# Alternative: Use Upstash Redis (free tier)
