--- a/render.yaml
+++ b/render.yaml
@@ -11,12 +11,8 @@ services:
       pnpm build:web &&
       cp -r apps/web/public apps/web/.next/standalone/apps/web/ &&
       cp -r apps/web/.next/static apps/web/.next/standalone/apps/web/.next/
-    startCommand: node apps/web/.next/standalone/apps/web/server.js
+    startCommand: HOSTNAME=0.0.0.0 node apps/web/.next/standalone/apps/web/server.js
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PORT
-        value: 3000
-      - key: HOSTNAME
-        value: 0.0.0.0
     healthCheckPath: /
