--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,8 @@
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
     "@prisma/client": "^5.8.0",
-    "framer-motion": "^11.0.0"
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.300.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
