--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,9 @@
     "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "bot:setup": "node scripts/setup-bot.js",
+    "bot:webhook": "node scripts/set-webhook.js"
   },
   "dependencies": {
     "next": "^14.1.0",
