--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:seed": "node prisma/seed.js",
     "bot:setup": "node scripts/setup-bot.js",
     "bot:webhook": "node scripts/set-webhook.js"
   },
